--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en"  xmlns:th="http://www.thymeleaf.org">
+<html lang="en"      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Users DB</title>
+    <title>Registration</title>
     <style type="text/css">
         .parent {
             width: 100%;
@@ -18,12 +18,6 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-        }
-
-        .logout {
-            position: absolute;
-            top: 20%;
-            left: 50%;
         }
 
         body {
@@ -47,8 +41,6 @@
             text-align: center;
             font-weight: 900;
             color: lightslategrey;
-            margin-left: 10px;
-            margin-right: 10px;
         }
 
 
@@ -57,34 +49,34 @@
 
 <body>
 <div class="parent">
-
-    <div class="logout">
-        <form action="/logout">
-            <input type="submit" value="Logout">
-        </form>
-    </div>
     <div class="block">
-        <h2>INFO PAGE FOR : </h2>
+        <h1> Registration </h1>
         <table>
+            <form th:action="@{/create}" th:object="${user}" method="post">
+                    <h2 th:text="${msg}"></h2>
                 <tr>
-                    <td><label>ID:</label></td>
-                    <td th:text="${user.getId()}">id</td>
+                    <td><label for="firstName">First name</label></td>
+                    <td><input type="text" id="firstName" name="firstName" placeholder="First name"/></td>
                 </tr>
 
                 <tr>
-                    <td><label>First name:</label></td>
-                    <td th:text="${user.getFirstName()}">First Name</td>
+                    <td><label for="lastName">Last name</label></td>
+                    <td><input type="text" id="lastName" name="lastName" placeholder="Last name"/></td>
                 </tr>
 
                 <tr>
-                    <td><label>Last name:</label></td>
-                    <td th:text="${user.getLastName()}">Last Name</td>
+                    <td><label for="password">Password</label></td>
+                    <td><input type="password" id="password" name="password" placeholder="Password"/></td>
                 </tr>
 
+                <tr>
+                    <td><input type="submit" value="Register"></td>
+                </tr>
+            </form>
         </table>
     </div>
 </div>
-
+</div>
 
 </body>
 </html>
