--- a/src/main/resources/templates/err/warning.html
+++ b/src/main/resources/templates/err/warning.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en"  xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Users DB</title>
+    <title>Error</title>
     <style type="text/css">
         .parent {
             width: 100%;
@@ -20,12 +20,6 @@
             transform: translate(-50%, -50%);
         }
 
-        .logout {
-            position: absolute;
-            top: 20%;
-            left: 50%;
-        }
-
         body {
             background: grey;
         }
@@ -41,50 +35,28 @@
             color: firebrick;
             font-weight: 900;
         }
-
         .select {
             background: darkslategrey;
             text-align: center;
             font-weight: 900;
             color: lightslategrey;
-            margin-left: 10px;
-            margin-right: 10px;
         }
 
 
     </style>
 </head>
-
 <body>
 <div class="parent">
-
-    <div class="logout">
-        <form action="/logout">
-            <input type="submit" value="Logout">
-        </form>
-    </div>
     <div class="block">
-        <h2>INFO PAGE FOR : </h2>
-        <table>
-                <tr>
-                    <td><label>ID:</label></td>
-                    <td th:text="${user.getId()}">id</td>
-                </tr>
+        <h1>ERROR</h1>
+            <h2 th:text="${msg}"></h2>
+        <form action="/index">
+            <input type="submit" value="HOME">
+        </form>
 
-                <tr>
-                    <td><label>First name:</label></td>
-                    <td th:text="${user.getFirstName()}">First Name</td>
-                </tr>
-
-                <tr>
-                    <td><label>Last name:</label></td>
-                    <td th:text="${user.getLastName()}">Last Name</td>
-                </tr>
-
-        </table>
+        </div>
     </div>
 </div>
-
 
 </body>
 </html>
