--- a/src/main/resources/templates/admin/update.html
+++ b/src/main/resources/templates/admin/update.html
@@ -64,7 +64,7 @@
         <h1> UPDATE </h1>
 
         <table>
-            <form action="#" th:action="@{/update}" th:object="${user}" th:method="PATCH">
+            <form action="#" th:action="@{/admin/update}" th:object="${user}" th:method="PATCH">
                 <input type="hidden" th:field="*{password}">
 <!--                <input type="hidden" th:field="*{roles}">-->
 
