--- a/src/main/resources/templates/err/warning.html
+++ b/src/main/resources/templates/err/warning.html
@@ -2,17 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--    <link href="css/bootstrap.min.css" rel="stylesheet">-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Error</title>
     <style type="text/css">
         .parent {
             width: 100%;
-            height: 100%;
+            height: 40%;
             position: absolute;
             top: 0;
             left: 0;
             overflow: auto;
         }
-
         .block {
             position: absolute;
             top: 50%;
@@ -21,42 +23,27 @@
         }
 
         body {
-            background: grey;
+            background: rgba(231, 230, 230, 0.99);
         }
-
-        td {
-            font: 1.2em "Fira Sans", sans-serif;
-            background: lightslategray;
-        }
-
-        h1 {
-            font: 1.6em "Fira Sans", sans-serif;
-            text-align: center;
-            color: firebrick;
-            font-weight: 900;
-        }
-        .select {
-            background: darkslategrey;
-            text-align: center;
-            font-weight: 900;
-            color: lightslategrey;
-        }
-
-
     </style>
 </head>
 <body>
+
 <div class="parent">
     <div class="block">
-        <h1>ERROR</h1>
-            <h2 th:text="${msg}"></h2>
-        <form action="/index">
-            <input type="submit" value="HOME">
-        </form>
+        <div class="alert alert-danger">
+            <h1 class="alert alert-danger">ERROR</h1>
+            <h2 class="alert alert-danger" th:text="${msg}"></h2>
+            <div class="d-grid gap-2">
+                <input  ref="#" onclick="history.back()" class="btn btn-primary btn-block mb-xxl-5" type="submit" value="HOME">
+            </div>
+        </div>
 
         </div>
     </div>
 </div>
 
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
