--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,17 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--    <link href="css/bootstrap.min.css" rel="stylesheet">-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Login</title>
     <style type="text/css">
         .parent {
             width: 100%;
-            height: 100%;
+            height: 40%;
             position: absolute;
             top: 0;
             left: 0;
             overflow: auto;
         }
-
         .block {
             position: absolute;
             top: 50%;
@@ -21,60 +23,41 @@
         }
 
         body {
-            background: grey;
+            background: rgba(231, 230, 230, 0.99);
         }
-
-        td {
-            font: 1.2em "Fira Sans", sans-serif;
-            background: lightslategray;
-        }
-
-        h1 {
-            font: 1.6em "Fira Sans", sans-serif;
-            text-align: center;
-            color: firebrick;
-            font-weight: 900;
-        }
-
-        .select {
-            background: darkslategrey;
-            text-align: center;
-            font-weight: 900;
-            color: lightslategrey;
-        }
-
-
     </style>
 </head>
-
 <body>
+
+
+
+
+
+
 <div class="parent">
     <div class="block">
-        <h1> Login </h1>
+        <h3> Please sign in</h3>
         <table>
             <form th:action="@{/login}" method="post">
-                <div style="color: #ff0008" th:if = "${param.error}">
+                <div class="alert alert-danger" th:if = "${param.error}">
                     Error
                 </div>
-
                 <tr>
-                    <td><label for="username">Login :</label></td>
-                    <td><input type="text" id="username" name="username" placeholder="Login"/></td>
+                    <td ><input class="form-control" type="text" id="username" name="username" placeholder="Login"/></td>
                 </tr>
 
                 <tr>
-                    <td><label for="password">Password :</label></td>
-                    <td><input type="password" id="password" name="password" placeholder="Password"/></td>
+                    <td><input class="form-control" type="password" id="password" name="password" placeholder="Password"/></td>
                 </tr>
                 <tr>
-                    <td><input type="submit" value="Login"></td>
+                    <td>
+                        <div class="d-grid gap-2">
+                            <input class="btn btn-primary btn-block mb-xxl-5" type="submit" value="Sign in">
+                        </div>
+                    </td>
 
             </form>
-            <td>
-                <form action="/create">
-                    <input type="submit" value="Registration">
-                </form>
-            </td>
+
             </tr>
 
         </table>
@@ -83,5 +66,7 @@
 </div>
 </div>
 
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
