--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--    <link href="css/bootstrap.min.css" rel="stylesheet">-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Login</title>
     <style type="text/css">
@@ -47,7 +46,7 @@
                 </tr>
 
                 <tr>
-                    <td><input class="form-control" type="password" id="password" name="password" placeholder="Password"/></td>
+                    <td><input class="form-control" type="password" id="password" name="password" placeholder="Password" autocomplete="on"/></td>
                 </tr>
                 <tr>
                     <td>
