--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -145,6 +145,22 @@
                                            required/>
                                 </td>
                             </tr>
+                            <tr align="center">
+                                <td colspan="2">
+                                    <fieldset>
+                                        <b>Authority</b>
+
+                                        <select id="select-roles"
+                                                style="width: 30%"
+                                                class="form-select"
+                                                name="roles"
+                                                multiple
+                                                size="2">
+                                        </select>
+
+                                    </fieldset>
+                                </td>
+                            </tr>
 
                             <tr align="center">
                                 <td>
